--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,6 +4,10 @@ plugins {
 }
 
 android {
+    viewBinding {
+        enabled = true
+    }
+
     namespace 'com.example.myapplication'
     compileSdk 33
 
